--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,16 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Steps-
 
-Things you may want to cover:
+1---
+database.yml está configurado para user/password = gabriel, criar este user e sua role no postgresql.
 
-* Ruby version
+2---
+rake db:create db:migrate db:seed
 
-* System dependencies
+3---
+rails server
 
-* Configuration
+Obs-
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Criei 2 tasks no Seeds.rb , uma para usuarios e outra para eventos cadastrados pelo usuario id 1.
