--- a/README.rdoc
+++ b/README.rdoc
@@ -18,26 +18,25 @@
 = Tarefas:
 
 - Criar uma feature para cadastrar os eventos. Quero ver o nome do evento, uma foto, o endereço e a data.
-
-*Done*
+>Done
 
 - Quero uma lista com os próximos eventos que vão ocorrer. Preciso que sejam ordenadas de acordo com a data.
-*Done*
+>Done
 
 - Quero um mapa com os próximos eventos que vão ocorrer, ao clicar no pin quero ver as informações do evento.
-*Done*
+>Done
 
 - Essa aplicação pode ser usada por vários usuários e cada usuário poderá cadastrar seus eventos. Não é necessário fazer a autenticação, mas é necessário que eu possa cadastrar em nome de um usuário. Também não é necessário fazer o cadastro do usuário. Você pode cadastrar os usuários no seed do Rails.
-*Cadastro de usuarios/eventos criados e tambem é possivel a edição do evento direcionando-o para um usuario cadastrado.Tambem foram criados seeds para user e events.*
+>Cadastro de usuarios/eventos criados e tambem é possivel a edição do evento direcionando-o para um usuario cadastrado.Tambem foram criados seeds para user e events.*
 
 - O site não precisa ter um layout muito rebuscado, porém, precisa ser organizado.
-*Bootstrap simples*
+>Bootstrap simples
 
 - Deixei alguns eventos pré-cadastrados em uma planilha(http://bit.ly/1m3RI9T), que deverá ser importada através do sistema ou de uma rake task.
-*Planilha eventos.csv usada para testes*
+>Planilha eventos.csv usada para testes
 
 - Quero ter uma página que liste os usuários e ao clicar no usuário verei um link com o título de "Meus eventos". Ao clicar nesse link, abre uma lista de eventos cadastrados por esse usuário.
-*Done*
+>Done
 
 = OBS
 - Criei 2 tasks no Seeds.rb , uma para usuarios e outra para eventos cadastrados pelo usuario id 1.
